--- a/src/app/hero/hero.component.html
+++ b/src/app/hero/hero.component.html
@@ -2,11 +2,12 @@
   class="bg-black text-white flex flex-col items-center justify-center min-h-[100vh]"
 >
   <div class="flex flex-0 flex-col items-center justify-center">
+    <img src="assets/bundesliga-logo.png"/>
     <div
-      class="border-[7px] max-w-[340px] md:max-w-[600px] lg:max-w-full border-orange-500 p-12"
+      class="border-[7px] max-w-[340px] md:max-w-[600px] lg:max-w-full border-orange-500 p-12 mt-20"
     >
       <h1>BUNDESLIGA, RANKED</h1>
     </div>
   </div>
-  <span>Ranking die besten 100 Spieler in der Bundesliga</span>
+  <span>Ranking der besten 100 Spieler der Bundesliga</span>
 </div>
