add player stats to data & display stats

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,5 @@
 <app-hero></app-hero>
 <app-description></app-description>
+<div class="flex justify-center">
+  <app-player-card></app-player-card>
+</div>
